# neural-sheaf-diffusion

./: .gitignore  README.md  definitions.py  environment.yml  environment_cpu.yml  environment_gpu.yml  main.py  run_sweeps.sh  setup.cfg
.github/workflows/: python-tests.yml
config/: orth_webkb_sweep.yml
exp/: parser.py  run.py  sweep_runner.py
exp/scripts/: run_chameleon.sh  run_cornell.sh  run_squirrel.sh  run_texas.sh  run_wisconsin.sh
exp/wandb/: latest-run
exp/wandb/run-20220113_083931-1xmtnse4/: run-1xmtnse4.wandb
exp/wandb/run-20220113_084009-sxi3dk0h/: run-sxi3dk0h.wandb
exp/wandb/run-20220117_204045-19exjonv/: run-19exjonv.wandb
exp/wandb/run-20220118_075543-1x5rbqbv/: run-1x5rbqbv.wandb
exp/wandb/run-20220118_075713-411khgvs/: run-411khgvs.wandb
exp/wandb/run-20220118_075909-3gexe9vd/: run-3gexe9vd.wandb
exp/wandb/run-20220118_081020-2i6cfx5a/: run-2i6cfx5a.wandb
exp/wandb/run-20220118_081518-lfctkpm2/: run-lfctkpm2.wandb
exp/wandb/run-20220118_081718-3thrup3z/: run-3thrup3z.wandb
lib/: __init__.py  laplace.py  perm_utils.py  test_laplace.py
models/: cont_models.py  disc_models.py  laplacian_builders.py  orthogonal.py  positional_encodings.py  sheaf_base.py  sheaf_models.py  test_builders.py  test_cont_models.py  test_disc_models.py  test_orthogonal.py  test_positional_encodings.py  test_sheaf_models.py
notebooks/: animation.ipynb  diffusion.ipynb  diffusion_3.ipynb  diffusion_more_cl.ipynb  real_world.ipynb  sheaf_conv.ipynb  sheaf_tests.ipynb  z2_sheaf_conv.ipynb
utils/: __init__.py  bipartite.py  classic.py  heterophilic.py
(+80 files in other folders)
