[metadata]
name = nsd
version = 0.0.1
author = "twitter-research"
author_email = example@example.com
description = NSD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/twitter-research/neural-sheaf-diffusion
project_urls =
    Bug Tracker = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    nsd = .
python_requires = >=3.6

[options.packages.find]
where = .